--- a/styles/toggle.scss
+++ b/styles/toggle.scss
@@ -30,9 +30,18 @@ body {
     transition: 0.5s all ease;
     outline-width: thin;
 
+
+
     @media (max-width: 600px) {
         outline: none;
+
+        &:hover,
+        &:active {
+            outline: none;
+            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+        }
     }
+
 
     .toggle {
         width: 25px;
