--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,6 +7,7 @@ html {
 body {
     transition: 1s all ease;
     margin: 0;
+    background: ghostwhite;
     color: #555;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
